crates/resonant-lab/tests/snapshots/snapshots__deterministic-reunion-clean.snap
---
source: crates/resonant-lab/tests/snapshots.rs
expression: "serde_json::json!({ \"merge\": deterministic, \"naive\": naive, })"
---
{
  "merge": {
    "digest": {
      "applied_override": null,
      "compared_subjects": 5,
      "inputs": [
        "Island A epoch 31",
        "Island B epoch 31",
        "2 divergence event(s) replayed"
      ],
      "overall_outcome": "stable",
      "rules_fired": [
        "Matching local outcomes converge cleanly.",
        "Island B supplied the stronger retained detail.",
        "Island A supplied the stronger retained detail."
      ],
      "unresolved": []
    },
    "members": [
      {
        "epoch": 31,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island B supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "iona",
        "subject_label": "Iona",
        "trust_weight": 87
      },
      {
        "epoch": 31,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "kestrel",
        "subject_label": "Kestrel",
        "trust_weight": 84
      },
      {
        "epoch": 31,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "lumen",
        "subject_label": "Lumen",
        "trust_weight": 85
      },
      {
        "epoch": 31,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island B supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "morrow",
        "subject_label": "Morrow",
        "trust_weight": 80
      },
      {
        "epoch": 31,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island B supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "nyx",
        "subject_label": "Nyx",
        "trust_weight": 82
      }
    ],
    "residues": []
  },
  "naive": {
    "diffs": [],
    "naive": [
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island B",
        "status": "accepted",
        "subject_label": "Iona"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Kestrel"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Lumen"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island B",
        "status": "accepted",
        "subject_label": "Morrow"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island B",
        "status": "accepted",
        "subject_label": "Nyx"
      }
    ]
  }
}
