crates/resonant-lab/tests/snapshots/snapshots__deterministic-reunion-conflicting-acceptance.snap
---
source: crates/resonant-lab/tests/snapshots.rs
expression: "serde_json::json!({ \"merge\": deterministic, \"naive\": naive, })"
---
{
  "merge": {
    "digest": {
      "applied_override": null,
      "compared_subjects": 5,
      "inputs": [
        "Island A epoch 58",
        "Island B epoch 58",
        "2 divergence event(s) replayed"
      ],
      "overall_outcome": "provisional",
      "rules_fired": [
        "Matching local outcomes converge cleanly.",
        "Island A supplied the stronger retained detail.",
        "Same-epoch high-trust conflict survives as residue."
      ],
      "unresolved": [
        {
          "detail": "Island A says accepted. Island B says quarantined. Both paths remain fresh enough that deterministic reunion refuses to counterfeit certainty.",
          "handled_by_override": false,
          "subject_label": "Nyx"
        }
      ]
    },
    "members": [
      {
        "epoch": 58,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "iona",
        "subject_label": "Iona",
        "trust_weight": 86
      },
      {
        "epoch": 58,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "kestrel",
        "subject_label": "Kestrel",
        "trust_weight": 84
      },
      {
        "epoch": 58,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "lumen",
        "subject_label": "Lumen",
        "trust_weight": 80
      },
      {
        "epoch": 58,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "morrow",
        "subject_label": "Morrow",
        "trust_weight": 78
      },
      {
        "epoch": 58,
        "explanation": "Fresh admissible evidence remains materially unresolved after the allowed dominance checks.",
        "residue": {
          "detail": "Island A says accepted. Island B says quarantined. Both paths remain fresh enough that deterministic reunion refuses to counterfeit certainty.",
          "handled_by_override": false,
          "subject_label": "Nyx"
        },
        "rule_summary": [
          "Same-epoch high-trust conflict survives as residue."
        ],
        "source": "both",
        "stability": "provisional",
        "status": "disputed",
        "subject_id": "nyx",
        "subject_label": "Nyx",
        "trust_weight": 86
      }
    ],
    "residues": [
      {
        "detail": "Island A says accepted. Island B says quarantined. Both paths remain fresh enough that deterministic reunion refuses to counterfeit certainty.",
        "handled_by_override": false,
        "subject_label": "Nyx"
      }
    ]
  },
  "naive": {
    "diffs": [
      {
        "deterministic_status": "disputed",
        "naive_status": "accepted",
        "note": "Naive reunion would erase visible residue.",
        "subject_label": "Nyx"
      }
    ],
    "naive": [
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Iona"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Kestrel"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Lumen"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Morrow"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Nyx"
      }
    ]
  }
}
