crates/resonant-lab/tests/snapshots/snapshots__deterministic-reunion-stale-witness.snap
---
source: crates/resonant-lab/tests/snapshots.rs
expression: "serde_json::json!({ \"merge\": deterministic, \"naive\": naive, })"
---
{
  "merge": {
    "digest": {
      "applied_override": null,
      "compared_subjects": 5,
      "inputs": [
        "Island A epoch 42",
        "Island B epoch 42",
        "2 divergence event(s) replayed"
      ],
      "overall_outcome": "provisional",
      "rules_fired": [
        "Matching local outcomes converge cleanly.",
        "Island A supplied the stronger retained detail.",
        "Freshness dominated older permissive acceptance."
      ],
      "unresolved": [
        {
          "detail": "accepted on the older path remains visible as residue, because recontact did not restore innocence.",
          "handled_by_override": false,
          "subject_label": "Morrow"
        }
      ]
    },
    "members": [
      {
        "epoch": 42,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "iona",
        "subject_label": "Iona",
        "trust_weight": 87
      },
      {
        "epoch": 42,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "kestrel",
        "subject_label": "Kestrel",
        "trust_weight": 83
      },
      {
        "epoch": 42,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "lumen",
        "subject_label": "Lumen",
        "trust_weight": 79
      },
      {
        "epoch": 42,
        "explanation": "Fresher admissible evidence downgrades the older acceptance path.",
        "residue": {
          "detail": "accepted on the older path remains visible as residue, because recontact did not restore innocence.",
          "handled_by_override": false,
          "subject_label": "Morrow"
        },
        "rule_summary": [
          "Freshness dominated older permissive acceptance."
        ],
        "source": "island_a",
        "stability": "provisional",
        "status": "provisional",
        "subject_id": "morrow",
        "subject_label": "Morrow",
        "trust_weight": 74
      },
      {
        "epoch": 42,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "nyx",
        "subject_label": "Nyx",
        "trust_weight": 80
      }
    ],
    "residues": [
      {
        "detail": "accepted on the older path remains visible as residue, because recontact did not restore innocence.",
        "handled_by_override": false,
        "subject_label": "Morrow"
      }
    ]
  },
  "naive": {
    "diffs": [
      {
        "deterministic_status": "provisional",
        "naive_status": "provisional",
        "note": "Naive reunion would erase visible residue.",
        "subject_label": "Morrow"
      }
    ],
    "naive": [
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Iona"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Kestrel"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Lumen"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "provisional",
        "subject_label": "Morrow"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Nyx"
      }
    ]
  }
}
