crates/resonant-lab/tests/snapshots/snapshots__deterministic-reunion-trust-laundering.snap
---
source: crates/resonant-lab/tests/snapshots.rs
expression: "serde_json::json!({ \"merge\": deterministic, \"naive\": naive, })"
---
{
  "merge": {
    "digest": {
      "applied_override": null,
      "compared_subjects": 5,
      "inputs": [
        "Island A epoch 64",
        "Island B epoch 64",
        "2 divergence event(s) replayed"
      ],
      "overall_outcome": "provisional",
      "rules_fired": [
        "Matching local outcomes converge cleanly.",
        "Island A supplied the stronger retained detail.",
        "Trust and corroboration quality dominated raw witness count.",
        "Island A preserved the more admissible path."
      ],
      "unresolved": [
        {
          "detail": "Island B accumulated a louder but lower-quality witness cluster. The merge retains that laundering attempt as visible residue.",
          "handled_by_override": false,
          "subject_label": "Lumen"
        }
      ]
    },
    "members": [
      {
        "epoch": 64,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "iona",
        "subject_label": "Iona",
        "trust_weight": 87
      },
      {
        "epoch": 64,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "kestrel",
        "subject_label": "Kestrel",
        "trust_weight": 84
      },
      {
        "epoch": 64,
        "explanation": "Low-quality reinforcing witnesses were discounted during reunion.",
        "residue": {
          "detail": "Island B accumulated a louder but lower-quality witness cluster. The merge retains that laundering attempt as visible residue.",
          "handled_by_override": false,
          "subject_label": "Lumen"
        },
        "rule_summary": [
          "Trust and corroboration quality dominated raw witness count.",
          "Island A preserved the more admissible path."
        ],
        "source": "island_a",
        "stability": "provisional",
        "status": "provisional",
        "subject_id": "lumen",
        "subject_label": "Lumen",
        "trust_weight": 72
      },
      {
        "epoch": 64,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "morrow",
        "subject_label": "Morrow",
        "trust_weight": 79
      },
      {
        "epoch": 64,
        "explanation": "Both islands converge on accepted.",
        "residue": null,
        "rule_summary": [
          "Matching local outcomes converge cleanly.",
          "Island A supplied the stronger retained detail."
        ],
        "source": "both",
        "stability": "stable",
        "status": "accepted",
        "subject_id": "nyx",
        "subject_label": "Nyx",
        "trust_weight": 80
      }
    ],
    "residues": [
      {
        "detail": "Island B accumulated a louder but lower-quality witness cluster. The merge retains that laundering attempt as visible residue.",
        "handled_by_override": false,
        "subject_label": "Lumen"
      }
    ]
  },
  "naive": {
    "diffs": [
      {
        "deterministic_status": "provisional",
        "naive_status": "accepted",
        "note": "Naive reunion would erase visible residue.",
        "subject_label": "Lumen"
      }
    ],
    "naive": [
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Iona"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Kestrel"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island B",
        "status": "accepted",
        "subject_label": "Lumen"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Morrow"
      },
      {
        "note": "Latest or loudest path wins. Residue is discarded.",
        "source": "Island A",
        "status": "accepted",
        "subject_label": "Nyx"
      }
    ]
  }
}
